--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.45.0",
     "next": "^14.2.5",
+    "next-intl": "^4.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
